--- a/mystyle.css
+++ b/mystyle.css
@@ -7,17 +7,17 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+  
 }
 header {
   display: flex;
   justify-content: right;
   align-items: center;
-  padding: 30px 10%;
+  padding: 30px 30px;
  
 }
 .nav-type {
-  list-style: none;
+  list-style:upper-latin;
 }
 .nav-type li {
   display: inline-block;
@@ -33,8 +33,81 @@ button {
 .feet {
   text-align: center;
   background-color: gold;
+  border-radius: 4px;
 }
 body {
   background-color: black;
 }
 
+* {
+  box-sizing: border-box;
+  align-content: center;
+}
+
+input[type=text], select, textarea {
+  width: 350px;
+  padding: 12px;
+  border: 1px solid green;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+input[type=submit] {
+  background-color: black;
+  color: gold;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+input[type=submit]:hover {
+  background-color: green;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: gold;
+  padding: 20px;
+  width: fit-content;
+  
+}
+
+.col-25 {
+  float: left;
+  width: 350px;
+  margin-top: 6px;
+}
+
+
+.col-75 {
+  float: left;
+  width: 350px;
+  margin-top: 6px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+.contain{
+  background-color: green;
+  border-radius: 4px;
+}
+img{
+  border-radius: 10px;
+}
